<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/frg_container_padding"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/TXV_frg_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frg_login_title"
            android:textSize="@dimen/frg_login_textsize"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/TXV_frg_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frg_login_txvusername"
            android:textSize="@dimen/frg_label_textsize"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:id="@+id/ETX_frg_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:hint="@string/frg_login_etxusername"
            android:inputType="text"
            android:textSize="@dimen/frg_edittext_textsize" />

        <TextView
            android:id="@+id/TXV_frg_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frg_login_txvpassword"
            android:textSize="@dimen/frg_label_textsize"
            />
        <EditText
            android:id="@+id/ETX_frg_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frg_login_etxpassword"
            android:textSize="@dimen/frg_edittext_textsize"
            android:inputType="textPassword"
            android:layout_marginBottom="16sp"
            />
        <TextView
            android:id="@+id/txv_frg_login_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frg_login_txvrecover"
            android:clickable="true"
            android:focusable="true"
            android:textSize="@dimen/frg_textview2_textsize"
            android:layout_marginBottom="30dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/btn_frg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_frg_login"
            android:textSize="@dimen/frgbutton_textsize"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btn1_frg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1_frg_login"
            android:textSize="@dimen/frgbutton_textsize"
            android:textStyle="bold"
            />
    </LinearLayout>

</ScrollView>